# libKore

./: AUTHORS  LICENSE  README.md
source/: CMakeLists.txt
source/src/: KoreApplication.cpp  KoreApplication.hpp  KoreEngine.cpp  KoreEngine.hpp  KoreMacros.hpp  KoreModule.cpp  KoreModule.hpp  KoreTypes.hpp
source/src/data/: Block.cpp  Block.hpp  Block.inl  BlockExtension.cpp  BlockExtension.hpp  BlockMacros.hpp  BlockSettings.hpp  Library.cpp  Library.hpp  Library.inl  LibraryT.hpp  LibraryT.inl  MetaBlock.cpp  MetaBlock.hpp  PointerTypes.hpp
source/src/event/: ErrorEvent.cpp  ErrorEvent.hpp  KoreEvent.cpp  KoreEvent.hpp
source/src/memory/: MemoryManager.hpp  SimpleMemoryManager.cpp  SimpleMemoryManager.hpp
source/src/parallel/: MetaTasklet.cpp  MetaTasklet.hpp  Tasklet.cpp  Tasklet.hpp  TaskletMacros.hpp  TaskletRunner.cpp  TaskletRunner.hpp
source/src/plugin/: Loadable.cpp  Loadable.hpp  Module.cpp  Module.hpp  ModuleMacros.hpp  PluginInterface.hpp  PluginsManager.cpp  PluginsManager.hpp
source/src/serialization/: KoreSerializer.cpp  KoreSerializer.hpp  TreeSerializer.hpp
source/src/system/: CPU.hpp  CPU_GCC.cpp  CPU_MSVC.cpp
source/test/: CMakeLists.txt  test_main.cpp
source/test/data/: MyBlock.cpp  MyBlock.hpp  MyBlock1.cpp  MyBlock1.hpp  MyBlock2.cpp  MyBlock2.hpp  MyCustomType.cpp  MyCustomType.hpp  MyLibrary.cpp  MyLibrary.hpp  MyModule.cpp  MyModule.hpp  TestBlock.cpp  data_tests.cpp
source/test/parallel/: TestTasklet.cpp
source/test/serialization/: serialization_tests.cpp
